[project]
name = "building_energy_prediction"
version = "0.1.0"
description = "Building Energy Prediction"
authors = [
    {name = "Nicolas Audheon",email = "audheon.nicolas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyterlab (>=4.3.6,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
